# PSmunnin

./: .env.example  .gitIgnore  .gitignore  README.md  breadcrumb.jsx  calendar.jsx  card.jsx  craco.config.js  pyproject.toml
app/: layout.tsx  page.tsx
apps/api/: Dockerfile  pyproject.toml
apps/api/src/leadhunter_api/: main.py
apps/api/src/leadhunter_api/config/: settings.py
apps/api/src/leadhunter_api/infrastructure/database/: connection.py
apps/api/src/leadhunter_api/infrastructure/database/models/: lead_model.py
apps/api/src/leadhunter_api/presentation/api/v1/routers/: health.py  leads.py  metrics.py  pipeline.py  score.py
apps/api/src/leadhunter_api/presentation/api/v1/schemas/: leads.py  metrics.py  pipeline.py  score.py
apps/api/tests/: pytest.ini
apps/api/tests/fixtures/: sample_leads.json
apps/api/tests/integration/: test_health.py  test_leads.py
apps/api/tests/unit/: test_score.py
apps/api/web/: package.json
apps/api/web/components/layouts/: header.tsx
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/leadhunter_worker/: celery_app.py
apps/worker/src/leadhunter_worker/agents/collector_agent/: scout.py
apps/worker/src/leadhunter_worker/agents/proposal_agent/: outreach.py
apps/worker/src/leadhunter_worker/agents/qualifier_agent/: analyzer.py
apps/worker/src/leadhunter_worker/agents/scoring_agent/: engine.py
apps/worker/src/leadhunter_worker/tasks/: pipeline.py
apps/worker/tests/unit/: test_pipeline.py
backend/: requirements.local.txt  server.py
docs/: ADR-001-architecture.md  API_REFERENCE.md  ARCHITECTURE.md  (+5 more)
(+42 files in other folders)
