[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadhunter-api"
version = "0.1.0"
description = "API REST do LeadHunter AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
    "domain-core",
    "shared-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leadhunter_api"]
