[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadhunter-worker"
version = "0.1.0"
description = "Workers Celery do LeadHunter AI"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "openai>=1.35",
    "beautifulsoup4>=4.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "domain-core",
    "agents-toolkit",
    "shared-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leadhunter_worker"]
